<resources>
    <string name="app_name">Firebase</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="log_out">log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="content">Content</string>


</resources>