<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:onClick="openGallery"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_margin="10dp"
        android:id="@+id/sign_up_et_email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:inputType="text"
        android:layout_margin="10dp"
        android:id="@+id/sign_up_et_user_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:id="@+id/sign_up_et_password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:id="@+id/sign_up_et_re_password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="number"
        android:layout_margin="10dp"
        android:id="@+id/sign_up_et_age"
        tools:ignore="TextFields" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:layout_margin="10dp"
        android:id="@+id/sign_up_et_phone_number"
        tools:ignore="TextFields" />

    <Button
        android:onClick="signUp"
        android:layout_margin="5dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/sign_up_btn_sign_up"
        />
</LinearLayout>