<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:onClick="changeProfileImage"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@mipmap/ic_launcher_round"
        android:id="@+id/profile_image_profile_activity"
        android:layout_margin="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/profile_image_profile_activity"
        android:layout_toRightOf="@id/profile_image_profile_activity"
        android:text="@string/user_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        android:id="@+id/profile_user_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/profile_image_profile_activity"
        android:layout_toRightOf="@id/profile_image_profile_activity"
        android:layout_below="@+id/profile_user_name"
        android:text="@string/phone_number"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/profile_phone_number"/>

    <Button
        android:onClick="logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_below="@id/profile_image_profile_activity"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>